fix overflow-x

--- a/style/general.css
+++ b/style/general.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
+  background-color: red;
+  overflow-x: hidden;
 }
 
 .section-placeholder {
@@ -9,4 +11,3 @@ body {
   width: 100vw;
   background-color: gray;
 }
-
